// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app icon should render correctly 1`] = `
<li
  className="coz-nav-apps-item"
>
  <a
    data-icon="icon-cozy-drive"
    onClick={null}
    role="menuitem"
    title="Drive"
  >
    <AppIcon
      app={
        Object {
          "name": "Drive",
          "slug": "cozy-drive",
        }
      }
      className="coz-nav-apps-item-icon"
      domain="cozy.tools"
      secure={true}
    />
    <p
      className="coz-label"
    >
      Drive
    </p>
  </a>
</li>
`;

exports[`app icon should render correctly with target mobile and providing fetchIcon to AppIcon 1`] = `
<li
  className="coz-nav-apps-item"
>
  <a
    data-icon="icon-cozy-drive"
    onClick={null}
    role="menuitem"
    title="Drive"
  >
    <AppIcon
      app={
        Object {
          "name": "Drive",
          "slug": "cozy-drive",
        }
      }
      className="coz-nav-apps-item-icon"
      fetchIcon={[Function]}
    />
    <p
      className="coz-label"
    >
      Drive
    </p>
  </a>
</li>
`;
